[tool.poetry]
name = "dolar - def"
version = "0.1.0"
description = ""
authors = ["Pedro Henrique de Sousa Alcântara"]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.11.1"
bs4 = "^0.0.1"
psycopg2 = "^2.9.3"
SQLAlchemy = "^1.4.40"
black = "^22.8.0"
alembic = "^1.8.1"
requests = "^2.28.1"
matplotlib = "^3.5.3"
plotly = "^5.10.0"
pandas = "^1.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
